# gcn_simulator

./: .gitignore  Cargo.toml  README.md
configs/: default.toml
configs/optional_configs/: cora.toml  dense.toml  mixed.toml
configs/user_configs/: config.toml  cora_dense.toml  cora_mix.toml  cora_sparse.toml
graphs/: cora.graph  test.graph
nodefeatures/: cora-1.txt  cora-2.txt  test_1.feat
src/: cmd_args.rs  gcn_result.rs  graph.rs  lib.rs  main.rs  node_features.rs  settings.rs  statics.rs
src/accelerator/: agg_buffer.rs  input_buffer.rs  mem_interface.rs  mlp_buffer.rs  mod.rs  output_buffer.rs  sliding_window.rs  sparsify_buffer.rs  window_id.rs
src/utils/: init_test.rs  mod.rs
test_data/: feature1_system.txt  feature2_system.txt  features.txt  graph.txt  graph1.txt  graph_csr.txt  graph_system.txt
tests/: cora_test.rs  integeration_test.rs
